# simulador_proposta_comercial

./: .env  .gitignore  README.md  app.py  hello.py  pyproject.toml  watson.py
benchmarks/: cemig.txt  cemig_en.txt
etapas/: cronograma.py  diagnostico.py  encerramento.py  objetivos.py  restricoes.py  solucao_tecnica.py
prompts/: default_prompt.txt
simulacoes_salvas/: simulacao_20250705_000812.json  simulacao_20250705_002803.json
static/css/: carbon_theme.css
utils/: ai_agent.py  benchmark_loader.py  llm.py  navigation.py  prompt_loader.py
utils/styles/: __init__.py  carbon.py  components.py  theme.py
