[project]
name = "simulador-proposta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "fpdf2>=2.8.3",
    "matplotlib>=3.10.3",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "streamlit-aggrid>=1.1.6",
    "streamlit-extras>=0.7.5",
    "streamlit-option-menu>=0.4.0",
]
